fix border button mobile

--- a/src/components/Global/Nav/index.scss
+++ b/src/components/Global/Nav/index.scss
@@ -279,6 +279,7 @@
 
     button {
       padding-right: 15px;
+      border:0!important;
     }
 
     .navbar-collapse {
